--- a/app/views/layouts/_sidemenu.html.erb
+++ b/app/views/layouts/_sidemenu.html.erb
@@ -1,3 +1,5 @@
+<ul class="navbar-nav ml-auto">
+
 <% if customer_signed_in? %>
                   <li>
                    <th>ようこそ、<%= current_customer.name %>さん！</th>
@@ -53,3 +55,5 @@
                   </li>
 
               <% end %>
+
+              </ul>
