--- a/app/views/public/calendars/index.html.erb
+++ b/app/views/public/calendars/index.html.erb
@@ -1,33 +1,101 @@
-<style>
-.table {
-  table-layout: fixed;
-}
-</style>
-
-<p id="notice"><%= notice %></p>
-
-<div class='container'>
-  <h3>新着カレンダー</h3>
-  <div>
-
-
-
-    <table style="width:120px;">
-      <%= month_calendar events: @calendars do |date, calendars| %>
-        <%= date.day %>
+<html>
+<head>
+<meta charset='utf-8' />
+<link href="/packages/core/main.css" rel="stylesheet" />
+<link href="/packages/daygrid/main.css" rel="stylesheet" />
+<link href="/packages/timegrid/main.css" rel="stylesheet" />
+<link href="/packages/list/main.css" rel="stylesheet" />
+<script src="/packages/core/main.js"></script>
+<script src="/packages/core/locales-all.js"></script>
+<script src="/packages/interaction/main.js"></script>
+<script src="/packages/daygrid/main.js"></script>
+<script src="/packages/timegrid/main.js"></script>
+<script src="/packages/list/main.js"></script>
 
 
-        <% @item.each do |item| %>
-          <% if item.sample_at==date %>
-            <div>
-              <font size="2">
-               ・<%= link_to item.name,public_item_path(item.id) %>
-              </font>
-            </div>
-          <% end %>
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    var initialLocaleCode = 'ja';
+    var localeSelectorEl = document.getElementById('locale-selector');
+    var calendarEl = document.getElementById('calendar');
+
+    var calendar = new FullCalendar.Calendar(calendarEl, {
+      plugins: [ 'interaction', 'dayGrid', 'timeGrid', 'list' ],
+      header: {
+        left: 'prev,next today',
+        center: 'title',
+        right: 'dayGridMonth,listMonth'
+      },
+      locale: initialLocaleCode,
+      buttonIcons: false, // show the prev/next text
+      weekNumbers: true,
+      navLinks: true, // can click day/week names to navigate views
+      editable: true,
+      eventLimit: true, // allow "more" link when too many events
+      events: [
+        <% @items.each do |item| %>
+
+          {
+            title: "<%= item.name %>",
+            start: "<%= item.sample_at %>",
+            end: "<%= item.sample_at %>",
+            url: "<%= public_item_path(item.id) %>",
+          },
+
         <% end %>
-      <% end %>
-    </table>
 
-  </div>
-</div>
+      ]
+    });
+
+    calendar.render();
+
+    // build the locale selector's options
+    calendar.getAvailableLocaleCodes().forEach(function(localeCode) {
+      var optionEl = document.createElement('option');
+      optionEl.value = localeCode;
+      optionEl.selected = localeCode == initialLocaleCode;
+      optionEl.innerText = localeCode;
+      localeSelectorEl.appendChild(optionEl);
+    });
+
+    // when the selected option changes, dynamically change the calendar option
+    localeSelectorEl.addEventListener('change', function() {
+      if (this.value) {
+        calendar.setOption('locale', this.value);
+      }
+    });
+
+  });
+
+</script>
+<style>
+
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+    font-size: 14px;
+  }
+
+  #top {
+    background: #eee;
+    border-bottom: 1px solid #ddd;
+    padding: 0 10px;
+    line-height: 40px;
+    font-size: 12px;
+  }
+
+  #calendar {
+    max-width: 900px;
+    margin: 40px auto;
+    padding: 0 10px;
+  }
+
+</style>
+</head>
+<body>
+
+  <div id='calendar'></div>
+
+</body>
+</html>
