--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,51 +1,43 @@
-<div class='container'>
- <div class='row'>
-    <% if @customer.errors.any? %>
-    <%= @customer.errors.count %>error prohibited this obj from being saved:
-    <% @customer.errors.full_messages.each do |message| %>
-    <%= message %>
-    <% end %>
-    <% end %>
+<div class='row' align=center>
+  <% if @customer.errors.any? %>
+  <%= @customer.errors.count %>error prohibited this obj from being saved:
+  <% @customer.errors.full_messages.each do |message| %>
+  <%= message %>
+  <% end %>
+  <% end %>
+
+  <h4 style="background-color: #d3d3d3; display:inline;" class="mt-4 mb-4">　会員情報編集　</h4>
+
+  <%= form_with model: @customer, url: public_customer_path(@customer.id), local:true do |f| %>
 
 
-    <div class='container px-3 px-sm-3'>
-      <h4 style="background-color: #d3d3d3; display:inline;">　会員情報編集　</h4>
-    </div>
+  <table class="mt-4">
 
-    <table>
-      <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 ">
+    <tr>
+      <th>氏名</th>
+      <th><%= f.text_field :name, placeholder: "ユーザー名" %></th>
+    </tr>
 
-        <%= form_with model: @customer, url: public_customers_path(@customer.id), local:true do |f| %>
+    <tr>
+      <th>メールアドレス</th>
+      <th><%= f.email_field :email, placeholder: "メールアドレス" %></th>
+    </tr>
 
-        <tr><th>　</th></tr>
+    <tr>
+      <th>アイコン画像</th>
+      <th><%= f.attachment_field :image, class: "form-control-file answer_image" %></th>
+    </tr>
 
-        <tr>
-          <th>氏名</th>
-          <th>　　</th>
-          <th><%= f.text_field :name, placeholder: "ユーザー名" %></th>
-        </tr>
+  </table>
 
-        <tr><th>　</th></tr>
 
-         <tr>
-          <th>メールアドレス</th>
-          <th>　　</th>
-          <th><%= f.email_field :email, placeholder: "メールアドレス" %></th>
-        </tr>
 
-        <tr><th>　</th></tr>
-
-          </th>
-        </tr>
-      </div>
-    </table>
-
-    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-      <br></br>
-      <!--改行用-->
-      <%= f.submit '編集内容を保存する', class: "btn btn-success" %>
-      <% end %>
-      <%= link_to '退会する',public_customer_withdraw_path, class: "btn btn-danger" %>
-    </div>
+  <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+    <br></br>
+    <!--改行用-->
+    <%= f.submit '編集内容を保存する', class: "btn btn-success" %>
+    <%= link_to '退会する',public_customer_withdraw_path, class: "btn btn-danger" %>
   </div>
+
+  <% end %>
 </div>
