--- a/app/views/public/customers/mypage.html.erb
+++ b/app/views/public/customers/mypage.html.erb
@@ -1,32 +1,28 @@
- <div class='container px-3 px-sm-3'>
-    　<div class='row'>
-    　  <div>
-        <div class="container mb-4">
-          <h4 style="background-color: #d3d3d3; display:inline;">　マイページ　</h4>
-       </div>
+<div class='row'>
+　 <div align=center>
+    <h2>　マイページ　</h2>
+    <div class='mb-3'>
+      <h5>登録情報</h5>
+      <div class="icon_image"><%= attachment_image_tag(@customer, :image, :size => '150x150', class: "user-icon") %></div>
+      <table border="1">
+        <tr>
+          <td class="p-3 mb-2 bg-light text-dark">ユーザー名</td>
+          <td><%= @customer.name%></td>
+        </tr>
 
-       <div class='mb-3' style='font-weight:bold;'>
+        <tr>
+          <td class="p-3 mb-2 bg-light text-dark">メールアドレス</td>
+          <td><%= @customer.email%></td>
+        </tr>
 
-       <span style="margin-left:50px">登録情報　<%= link_to '　編集する　',edit_public_customers_path, data: {"turbolinks" => false}, class: "btn btn-success" %></span>
+      </table>
 
-       </div>
+      <br>
 
-          <div class='mb-3'>
-            <table border="1">
-              <tr>
-                <td class="p-3 mb-2 bg-light text-dark">ユーザー名</td>
-                <td><%= @customer.name%></td>
-              </tr>
-
-
-              <tr>
-                <td class="p-3 mb-2 bg-light text-dark">メールアドレス</td>
-                <td><%= @customer.email%></td>
-              </tr>
-
-            </table>
-         </div>
-
-        </div>
+      <div class='mb-3' style='font-weight:bold;'>
+        <%= link_to '　編集する　',edit_public_customer_path(@customer.id), data: {"turbolinks" => false}, class: "btn btn-success" %>
       </div>
+
     </div>
+  </div>
+</div>
