--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,1 +1,63 @@
- 
+ <div class='container px-5 px-sm-0'>
+
+  <br>
+  <h2 style="background-color: #d3d3d3; display:inline;">会員詳細</h2>
+  </br>
+
+  <br> </br>
+
+    <div class='row'>
+      <div class='col-md-3'>
+      </div>
+
+      <div class='col-md-8 offset-md-1'>
+
+        <% if flash[:createdflag] == true then %>
+        <p>You have created customer successfully.</p>
+        <% end %>
+        <div class="icon_image"><%= attachment_image_tag(@customer, :image, :size => '150x105') %></div>
+        <table>
+
+            <tr>
+              <th>会員ID</th>
+              <th>　　</th>
+              <th><%= @customer.id%></th>
+            </tr>
+
+            <tr>
+              <th>ユーザー名</th>
+              <th>　　</th>
+              <th><%= @customer.name %></th>
+            </tr>
+
+            <tr>
+              <th></th>
+              <th>　　</th>
+              <th>
+                <% if customer_signed_in? %>
+                  <% unless @customer.id == current_customer.id %>
+                    <!-- 既にroomが存在していれば既存のroomへ -->
+                    <% if @isRoom == true %>
+                        <!-- メールアイコンでroomに飛べるようにする -->
+                        <%= link_to public_room_path(@roomId) do %>
+                            <button id="dm_submit" class="btn btn-success">チャットを開始</button>
+                        <% end %>
+                    <% else %>
+                        <!-- roomが存在していなければroomを作成する  -->
+                        <%= form_for @room, url: public_rooms_path do |f| %>
+                            <%= fields_for @entry do |e| %>
+                               <%= e.hidden_field :customer_id, :value=> @customer.id %>
+                            <% end %>
+                            <button type="submit" id="dm_submit" class="btn btn-success">新規チャットを開始</button>
+                        <% end %>
+                    <% end %>
+                  <% end %>
+                <% end %>
+              </th>
+            </tr>
+
+        </table>
+
+      </div>
+    </div>
+</div>
