--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -6,7 +6,7 @@
             <div class="row">
 
               <div class="col-sm-3">
-                <h4 style="background-color: #d3d3d3; display:inline;">　商品一覧　</h4>
+                <h4 style="background-color: #d3d3d3; display:inline;">　プラモデル一覧　</h4>
 
               </div>
               <div class="col-sm-6">
