--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,96 +2,60 @@
 <html class="h-100">
   <head>
     <title>プラモデル情報サイト‐Construction-</title>
-    <%= favicon_link_tag 'icon1.png' %>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <script src=" https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
-    <%= render 'layouts/raty' %>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    
+    <%= favicon_link_tag 'icon1.png' %>
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
+    
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    
     <!--     Fonts and icons     -->
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+    
     <!-- Material Dashboard CSS -->
-    <link rel="stylesheet" href="assets/css/material-dashboard?v=2.1.2.css">
+    <link id="pagestyle" href="/assets_md/css/material-dashboard.css" rel="stylesheet" />
+    
   </head>
 
   <body class="g-sidenav-show bg-gray-100">
+    
     <% if customer_signed_in? %>
       <%= render 'layouts/sidemenu' %>
-      <%= yield %>
-
     <% elsif admin_signed_in? %>
-      <%= yield %>
-
+      <%= render 'layouts/sidemenu-admin' %>
     <% else %>
-      <%= yield %>
+     <%= render 'layouts/sidemenu-nouser' %>
     <% end %>
-
-    <!--   Core JS Files   -->
-  <script src="assets/js/core/jquery.min.js" type="text/javascript"></script>
-  <script src="assets/js/core/popper.min.js" type="text/javascript"></script>
-  <script src="assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
-
-  <!-- Plugin for the Perfect Scrollbar -->
-  <script src="assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
-
-  <!-- Plugin for the momentJs  -->
-  <script src="assets/js/plugins/moment.min.js"></script>
-
-  <!--  Plugin for Sweet Alert -->
-  <script src="assets/js/plugins/sweetalert2.js"></script>
-
-  <!-- Forms Validations Plugin -->
-  <script src="assets/js/plugins/jquery.validate.min.js"></script>
-
-  <!--  Plugin for the Wizard, full documentation here: https://github.com/VinceG/twitter-bootstrap-wizard -->
-  <script src="assets/js/plugins/jquery.bootstrap-wizard.js"></script>
-
-  <!--	Plugin for Select, full documentation here: http://silviomoreto.github.io/bootstrap-select -->
-  <script src="assets/js/plugins/bootstrap-selectpicker.js" ></script>
-
-  <!--  Plugin for the DateTimePicker, full documentation here: https://eonasdan.github.io/bootstrap-datetimepicker/ -->
-  <script src="assets/js/plugins/bootstrap-datetimepicker.min.js"></script>
-
-  <!--  DataTables.net Plugin, full documentation here: https://datatables.net/    -->
-  <script src="assets/js/plugins/jquery.datatables.min.js"></script>
-
-  <!--	Plugin for Tags, full documentation here: https://github.com/bootstrap-tagsinput/bootstrap-tagsinputs  -->
-  <script src="assets/js/plugins/bootstrap-tagsinput.js"></script>
-
-  <!-- Plugin for Fileupload, full documentation here: http://www.jasny.net/bootstrap/javascript/#fileinput -->
-  <script src="assets/js/plugins/jasny-bootstrap.min.js"></script>
-
-  <!--  Full Calendar Plugin, full documentation here: https://github.com/fullcalendar/fullcalendar    -->
-  <script src="assets/js/plugins/fullcalendar.min.js"></script>
-
-  <!-- Vector Map plugin, full documentation here: http://jvectormap.com/documentation/ -->
-  <script src="assets/js/plugins/jquery-jvectormap.js"></script>
-
-  <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-  <script src="assets/js/plugins/nouislider.min.js" ></script>
-
-  <!-- Include a polyfill for ES6 Promises (optional) for IE11, UC Browser and Android browser support SweetAlert -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.4.1/core.js"></script>
-
-  <!-- Library for adding dinamically elements -->
-  <script src="assets/js/plugins/arrive.min.js"></script>
-
-  <!--  Google Maps Plugin    -->
-  <script  src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
-
-  <!-- Chartist JS -->
-  <script src="assets/js/plugins/chartist.min.js"></script>
-
-  <!--  Notifications Plugin    -->
-  <script src="assets/js/plugins/bootstrap-notify.js"></script>
-
-  <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
-  <script src="assets/js/material-dashboard.min.js?v=2.1.2" type="text/javascript"></script>
+  
+    <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
+      <div class='container-fluid'>
+        <%= yield %>
+        <%= render 'layouts/room_toast' %>
+      </div>
+      
+      <audio src="/Tuti.mp3" id="play-button"></audio>
+    </main>
+    
+    <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
+    <script src="/assets_md/js/material-dashboard.min.js"></script>
+    
+    <!-- Chart.min.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
+    
+    <!-- Font Awesome Icons -->
+    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
+    
+    <% if customer_signed_in? %>
+      <div id="current_customer_id" value="<%= current_customer.id %>"></div>
+    <% elsif admin_signed_in? %>
+      <div id="current_admin_id" value=""></div>
+    <% end %>
+    
   </body>
+  
 </html>
