--- a/app/assets/stylesheets/public/homes.scss
+++ b/app/assets/stylesheets/public/homes.scss
@@ -1,20 +1,11 @@
-// Place all the styles related to the public/homes controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
-.top {
-  background-image: image-url("top.png");
-  background-position: center;
-  background-size: cover;
-  width: 200px;
-  height: 100%;
+.jumbotron {
+    background-image: image-url('top.png');
 }
 
-.visual{
-      font-size: 20px;
-      font-weight: bold;
-      -webkit-text-stroke-width: 1.7px;
-      -webkit-text-stroke-color: darkorange;
-      -webkit-text-fill-color: white;
-      text-shadow: 4px 2px 0 gray;
-      }
+.visual {
+    color: #000;
+  text-shadow:1px 1px 0 #FFF, -1px -1px 0 #FFF,
+              -1px 1px 0 #FFF, 1px -1px 0 #FFF,
+              0px 1px 0 #FFF,  0-1px 0 #FFF,
+              -1px 0 0 #FFF, 1px 0 0 #FFF;
+}
