レイアウト修正

--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -4,9 +4,9 @@
   </center>
 </div>
 
-  <div class="row">
+  <div class="row mr-4">
 
-    <table class="table" >
+    <table class="table">
 
     <tr>
     <th class="p-3 mb-2 bg-light text-dark" width="20%">店名</th>
@@ -44,7 +44,7 @@
     </center>
   </div>
 
-  <div class="row">
+  <div class="row mr-4">
     <table class="table" >
 
     <tr>
