--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,24 +6,24 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    
+
     <%= favicon_link_tag 'icon1.png' %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    
+
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    
+
     <!--     Fonts and icons     -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
-    
+
     <!-- Material Dashboard CSS -->
     <link id="pagestyle" href="/assets_md/css/material-dashboard.css" rel="stylesheet" />
-    
+
   </head>
 
   <body class="g-sidenav-show bg-gray-100">
-    
+
     <% if customer_signed_in? %>
       <%= render 'layouts/sidemenu' %>
     <% elsif admin_signed_in? %>
@@ -31,31 +31,31 @@
     <% else %>
      <%= render 'layouts/sidemenu-nouser' %>
     <% end %>
-  
+
     <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
-      <div class='container-fluid'>
+      <div class='container-fluid mt-4'>
         <%= yield %>
         <%= render 'layouts/room_toast' %>
       </div>
-      
+
       <audio src="/Tuti.mp3" id="play-button"></audio>
     </main>
-    
+
     <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
     <script src="/assets_md/js/material-dashboard.min.js"></script>
-    
+
     <!-- Chart.min.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
-    
+
     <!-- Font Awesome Icons -->
     <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
-    
+
     <% if customer_signed_in? %>
       <div id="current_customer_id" value="<%= current_customer.id %>"></div>
     <% elsif admin_signed_in? %>
       <div id="current_admin_id" value=""></div>
     <% end %>
-    
+
   </body>
-  
+
 </html>
