--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
         <%= render 'layouts/room_toast' %>
       </div>
 
-      <audio src="/Tuti.mp3" id="play-button"></audio>
+      <audio src="<%= asset_path('Tuti.mp3') %>" id="play-button"></audio>
     </main>
 
     <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
