--- a/app/views/layouts/_sidemenu-admin.html.erb
+++ b/app/views/layouts/_sidemenu-admin.html.erb
@@ -20,11 +20,12 @@
         <button type="button" class="btn btn-outline-warning btn-lg">新着カレンダー</button>
       <% end %>
     </li>
-    <li class="nav-item">
-      <%= link_to public_rooms_path, class: "side_menu__link" do %>
-        <button type="button" class="btn btn-outline-warning btn-lg">チャットボックス</button>
-      <% end %>
-    </li>
+    <!--実装中によりコメントアウト-->
+    <!--<li class="nav-item">-->
+    <!--  <%#= link_to public_rooms_path, class: "side_menu__link" do %>-->
+    <!--    <button type="button" class="btn btn-outline-warning btn-lg">チャットボックス</button>-->
+    <!--  <#% end %>-->
+    <!--</li>-->
     <li class="nav-item">
       <%= link_to admin_items_path, class: "side_menu__link" do %>
         <button type="button" class="btn btn-outline-warning btn-lg">プラモデル一覧</button>
