--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -20,10 +20,7 @@
             </div>
           </div>
 
-
-
-          <br></br>
-          <!--↑　隙間明け-->
+          <br>
 
               <table class="table">
 
@@ -38,27 +35,25 @@
                 <% @items.each do |item| %>
                   <tr>
 
-                  <td><% if item.is_active == "リアル系" %>
-                    <div class="text-success"><%= item.is_active %></div>
-                    <%else%>
-                    <div class="text-primary"><%= item.is_active %></div>
-                    <%end%>
-                  </td>
+                    <td><% if item.is_active == "リアル系" %>
+                      <div class="text-success"><%= item.is_active %></div>
+                      <%else%>
+                      <div class="text-primary"><%= item.is_active %></div>
+                      <%end%>
+                    </td>
 
-                  <td><%= item.genre.name if item.genre.present? %></td>
+                    <td><%= item.genre.name if item.genre.present? %></td>
 
-                  <td><%= link_to admin_item_path(item.id) do%><%= item.name %><% end %></td>
-                  <td><%= item.price.to_s(:delimited)%></td>
-                  <td><%= item.sample_at %></td>
-
-
+                    <td><%= link_to admin_item_path(item.id) do%><%= item.name %><% end %></td>
+                    <td><%= item.price.to_s(:delimited)%></td>
+                    <td><%= item.sample_at %></td>
 
                   </tr>
                 <%end%>
               </table>
 
               <div class="col-md-8 offset-md-1">
-                <br><%= paginate @items %></br>
+                <br><%= paginate @items %>
               </div>
 
         </div>
